--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,57 @@
 aiofiles
-aiohttp
-asyncio
+bard
+SpeechRecognition
+pornhub-api==0.2.0
+aiohttp 
+asyncio 
 beautifulsoup4
+daxxhub
+deepai
+python-whois
 dnspython
 ffmpeg-python
 gitpython
 hachoir
+Faker
+pydub
+pycountry
 heroku3
-httpx==0.27.2
-motor
+apscheduler
+motor 
 numpy
-pillow==11.2.1
+pillow==9.5.0
 psutil
+wget
+pyfiglet
+qrcode
+pytz
+future==0.18.3
+search_engine_parser
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
+pyshorteners
+pyrogram==2.0.106
 python-dotenv
-pyyaml
+pyyaml==6.0.1
 requests
+emojis
 speedtest-cli
 spotipy
 tgcrypto
-python-telegram-bot
+telegraph
 unidecode
 yt-dlp
-git+https://github.com/yt-dlp/yt-dlp
 youtube-search
 youtube-search-python
-wget
+gtts
+git+https://github.com/AsmSafone/SafoneAPI
+lexica-api==1.5.1
+httpx==0.25.2
+gpytranslate
+openai==0.28.0
+pickledb
+python-telegram-bot==20.7
+img2pdf
+cloudscraper
+pycryptodome
+opencv-python
